2005-12-20  Matthew Hall  <matt@castleinthesky.org>

	* filter.glade; rule-editor.c: adding top/bottom buttons for
	filter manager dialog. Fixes bug 205616.

2005-12-20  Srinivasa Ragavan <sragavan@novell.comcom>

	** Fixes bug #246225 
	** Fixes bug #246227

	* filter-rule.c: Added the UI suggestions for "Advanced search" and "Save search"
	
	Commiting patch from Arulanandan P <arulanandan@gmail.com>

2005-12-17  Tor Lillqvist  <tml@novell.com>

	* filter-file.c
	* rule-context.c: Use libedataserver's e_xml_parse_file(). Use
	gstdio wrappers. Use g_file_test().

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* filter-rule.c (get_widget): cast.

2005-08-10  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Use privsolib instead of privlib. On Unix they are
	the same, on Win32 privsolibdir is the same as libdir. Use the
	macro name EVOLUTION_GLADEDIR as in e-util/e-util-private.h
	instead of FILTER_GLADEDIR, so that the Win32 run-time path lookup
	mechanism works. Use NO_UNDEFINED. Link explicitly with the actual
	libraries used.

	* filter-datespec.c: No localtime_r() on Win32, but we can use
	plain localtime() which is thread-safe in the Microsoft C library.

	* filter-datespec.c
	* rule-editor.c: Include e-util-private.h for Win32 path run-time
	lookup. Use EVOLUTION_GLADEDIR instead of FILTER_GLADEDIR, and do
	the filter.glade pathname construction at run-time so it works
	even when EVOLUTION_GLADEDIR is a function call on Win32.

2005-05-16  Not Zed  <NotZed@Ximian.com>

	* moved e-error to e-util

	* Makefile.am: fix error i18n extraction

2005-05-06  Sarfraaz Ahmed <asarfraaz@novell.com>

	* filter-rule.c : Remove markup from translatable string. Fixes #268390
	Patch submitted by Priit Laes

2005-02-17  Harry Lu  <harry.lu@sun.com>

	Fix for 72676.

	* rule-editor.c: (double_click): call gtk_tree_selection_get_selected
	to see if there is a row selected.

2005-02-09  Hans Petter Jansson  <hpj@novell.com>

	* Makefile.am: Install shared libraries in privlibdir.
